<resources>
    <string name="app_name">Kujuo App</string>
    <!-- strings.xml -->
    <string name="don_t_worry">Don\'t worry! we got you cover.\nUse Wallie instead of cash!
</string>
    <string name="let_s_try_w">Let\u00E2\u0080\u0099s try Wallie now!\nAnd get the best solution.
</string>

    <!--electricity-->
    <array name="electrityCompany">
        <item>Select Company</item>
        <item>Bahamas Electricity Corporation</item>
    </array>

    <!--gas-->
    <array name="gasCompany">
        <item>Select Company</item>
        <item>Caribbean Gas Ltd.</item>
        <item>Shell Bahamas </item>
        <item>Nassau Gas And Tanks</item>
        <item>Propane Gas Company</item>
    </array>
    <!--water-->
    <array name="water">
        <item>Select Company</item>
        <item>Caribbean Bottling Co (Bahamas) Ltd</item>
        <item>Bahama Blu Bahamas</item>
        <item>Pure Crystal Water</item>
        <item>Abaco Pure Ltd.</item>
    </array>
    <!--insuranse-->
    <array name="insurance">
        <item>Select Company</item>
        <item>J S Johnson And Co Ltd</item>
        <item>Family Guardian Insurance Co Ltd</item>
        <item>Insurance Management (Bahamas) Ltd.</item>
        <item>Colina Insurance Limited</item>
        <item>Insurance Management (Bahamas) Ltd.</item>
        <item>Bahamas Marine Surveyors</item>
        <item>Marine Surveyors Larry C. Phillips, ABYC</item>
        <item>Confidence Insurance Bahamas Agency Ltd.</item>
        <item>Bahamas CO-Operative League Insurance Brokerage Ltd</item>
        <item>New Providence Life Insurance Company Ltd</item>
    </array>


    <!--internet-->
    <array name="internetCompany">
        <item>Select Company</item>
        <item>Batelnet</item>
        <item>CABLE Bahamas REV Customer Experience Centre</item>
        <item>DSL Bahamas</item>
        <item>Jazztell Bahamas Ltd.</item>
        <item>SunISP</item>
        <item>Bahamas WiMax</item>
        <item>Abaco Internet Communications</item>
        <item>Quictick Bahamas Online Ticket Shop</item>
        <item>SecureNet Bahamas</item>
    </array>


    <array name="Myspinner">
        <item>Family Support</item>
        <item>Education</item>
        <item>Business</item>
        <item>Transport</item>
        <item>Medical payment</item>
        <item>Miscellaneous Payments</item>
    </array>
    <array name="Currency">
        <item>USD</item>
        <item>RPS</item>
        <item>INR</item>

    </array>
    <string name="Where">Where to\nSend?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="fingerprint">Fingerprint</string>
    <string name="password">Password</string>
    <string name="barcode">Barcode</string>
    <string name="qrcode">QR Code</string>
    <string name="balance">Balance</string>
    <string name="fullname">Full Name</string>
    <string name="savechanges">Save Change</string>
    <string name="phone">Phone Number</string>
    <string name="top_up">
    <font size="9">Top Up</font>
</string>
    <string name="order_debit_card">Order Debit Card</string>
    <string name="add_funds">Add Funds</string>
    <string name="pincode">Pin Code</string>
    <string name="acpc_text">Be sure the new pincode is</string>
    <string name="acpc_text2">different from the old pincode.</string>
    <string name="your_pin_code">Your Pin Code</string>
    <string name="please_enter">Please Enter</string>
    <string name="to_make_a_new_password_you_need">To make a new password you need</string>
    <string name="to_confirm_with_your_old_password">to confirm with your existing pincode</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="incorrect_password_please_try_again">Incorrect password, please try again!</string>
    <string name="pin_code_confirmation">Pin Code Confirmation</string>
    <string name="enter_new_email_address">Enter new email address</string>
    <string name="xyz_example_com">xyz@example.com</string>

    <array name="city">
        <item>Select City</item>
        <item>Nassau</item>
        <item>Lucaya</item>
        <item>Freeport</item>
        <item>West End</item>
        <item>Cooper’s Town</item>
        <item>San Andros</item>
        <item>George Town</item>
        <item>Marsh Harbour</item>
        <item>High Rock</item>
        <item>Andros Town</item>
        <item>Clarence Town</item>
        <item>Dunmore Town</item>
    </array>

    <array name="education">
        <item>Select</item>
        <item>Bahamas Baptist Community College</item>
        <item>Bahamas Institute of Business And Technology</item>
        <item>Cherub College</item>
        <item>University of the Bahamas</item>
        <item>Anglican Central Education Authority</item>
        <item>Bright Beginnings Nursery and Preschool</item>
        <item>H. O. Nash Junior High School</item>
    </array>

    <string name="tab1">Send Money</string>
    <string name="tab2">Received Money</string>
    <string name="tab3">NIS Record</string>

    <string name="asub1">Daily Asub</string>
    <string name="asub2">Weekly Asub</string>
    <string name="asub3">Monthly Asub</string>

    <string name="about">4 About Kujuo App

Kujuo App constantly drives towards innovation and

empowering its customers.

The Kujuo App App was launched for all branchless

banking services in 2020.

The app has an easy to understand registration

process and numerous use-cases such as Money

Transfer, Easyload, Utility Bill Payments and

Ticketing made available on your mobile phone.</string>


    <string name="privacy">4 Privacy Policy
Easypaisa Privacy Policy
1.1 The main security feature of the Service is the
five (5) digit MPIN, which You use to authenticate and
authorize transaction requests from Your Registered
Branchless Banking account number. In addition,
for certain transactions, You will be provided with a
unique transaction reference number and passcode.
1.2 The security of the MPIN must not be endangered
or compromised by choosing a MPIN that can be
easily guessed, such as five (5) of the same numbers
or numbers in sequence such as 12345.
1.3 You must not under any circumstances store Your
MPIN (or passcode) on Your Branchless handset in
any way whatsoever. If Your handset automatically
stores Your MPIN (or passcode), the onus is on
You to delete it. This will ensure that no one can
transact using Your Registered Branchless Banking
account number, as they will need Your MPIN and/or
passcode to complete and authorize transactions.
1.4 You are responsible for the security of the MPIN
and passcode (if applicable) and may not disclose the
MOPIN or passcode to anyone.
1.5 If anyone obtains Your MOPIN and/or passcode
and SIM with the Registered Branchless Banking
account number, it will be assumed that this person
is You. From our perspective, any transactions
authorised by this other person are legitimate and will
be acted on. You will be liable for any transactions
processed during this period until You advise us to</string>

    <string name="termscondition">These Terms and Conditions apply to the registration of
Account Holder and subsequent use of the Branchless Banking
Services offered by Telenor Microfinance Bank Limited
“Bank” or “TMB”). These terms and conditions (“Terms and
Conditions”) constitute an Agreement between (“Customer” or
“Agent” or “Account Holder” or “I/ We/You”) and TMB when you
register and make use of the Branchless Banking Service.
Definitions:
“BB Regulations” means the Branchless Banking Regulations
dated 12th July, 2016 issued by the State Bank of Pakistan, as
amended from time to time;
“Branchless Banking” or “BB” means conduct of banking
activities as outlined in the BB Regulations by TMB for Account
Holder having a Branchless Banking Account. It does not
include the information services already being provided to
existing Account Holders using channels like, phone, internet,
SMS etc;
“Branchless Banking Account” or “BB Account” means an
account maintained by the Account Holder in Easypaisa in
which credits and debits may be effected by virtue of Electronic
Funds Transfer and which is used to conduct Branchless
Banking activities as outlined in the BB Regulations;
"Rranchlace Ranlinn Ananew Anraamant” maane tha inetritmant</string>

    <string name="callus">Helpline 111-003-737 (with area code)

For Telenor users 3737

For merchants 345-545 (accessible from Telenor numbers)</string>
    <string name="Writetous">For general queries info@telenorbank.pk

For media related queries press.center@telenorbank.pk

For complaints complaints@telenorbank.pk</string>
</resources>