<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F2F2F2"
    tools:context=".Profile.EnterExistingPin">

    <!--        Header-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:gravity="center"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cp_backzep"
                android:background="@drawable/ic_arrow_backward"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pin_code_confirmation"
                android:fontFamily="@font/rubik"
                android:layout_marginLeft="15dp"
                android:textColor="#452A95"
                android:textSize="20dp"
                android:textStyle="bold"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <!--        Heading text-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/please_enter"
                android:textSize="25sp"
                android:fontFamily="@font/rubik"
                android:textColor="@android:color/black"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_pin_code"
                android:textSize="25sp"
                android:fontFamily="@font/rubik"
                android:textColor="@android:color/black"

                />
        </LinearLayout>
        <!--        Body Text-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to_make_a_new_password_you_need"
                android:textSize="15sp"
                android:fontFamily="@font/rubik"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to_confirm_with_your_old_password"
                android:textSize="15sp"
                android:fontFamily="@font/rubik"
                />
        </LinearLayout>
        <!--        Edit texts-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"

                >
                <EditText
                    android:id="@+id/codess"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:textSize="14sp"
                    android:inputType="numberPassword"
                    android:gravity="center"
                    android:imeOptions="actionNext"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:layout_weight="1"
                    android:background="@drawable/change_pincode_bg"
                    android:hint="X"
                    android:textColorHint="@color/blue"
                    android:descendantFocusability="beforeDescendants"
                    android:focusableInTouchMode="true"
                    />
                <EditText
                    android:id="@+id/codess2"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:textSize="14sp"
                    android:inputType="numberPassword"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:imeOptions="actionNext"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/change_pincode_bg"
                    android:hint="X"
                    android:textColorHint="@color/black"
                    android:layout_marginRight="10dp"
                    />
                <EditText
                    android:id="@+id/codess3"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:textSize="14sp"
                    android:inputType="numberPassword"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:imeOptions="actionNext"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:background="@drawable/change_pincode_bg"
                    android:hint="X"
                    android:textColorHint="@color/black"
                    android:layout_marginRight="10dp"
                    />
                <EditText
                    android:id="@+id/codess4"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:textSize="14sp"
                    android:layout_weight="1"
                    android:inputType="numberPassword"
                    android:gravity="center"
                    android:imeOptions="actionNext"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:background="@drawable/change_pincode_bg"
                    android:hint="X"
                    android:textColorHint="@color/black"
                    android:layout_marginRight="10dp"
                    />
                <EditText
                    android:id="@+id/codess5"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:textSize="14sp"
                    android:inputType="numberPassword"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:imeOptions="actionNext"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:background="@drawable/change_pincode_bg"
                    android:hint="X"
                    android:textColorHint="@color/black"
                    android:layout_marginRight="10dp"
                    />
                <EditText
                    android:id="@+id/codess6"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:textSize="14sp"
                    android:inputType="numberPassword"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:imeOptions="actionNext"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:background="@drawable/change_pincode_bg"
                    android:hint="X"
                    android:textColorHint="@color/black"
                    />

            </LinearLayout>


        </LinearLayout>
        <!--        Button-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:id="@+id/incorrect_pass"
                android:textColor="#FF4133"
                android:visibility="gone"
                android:text="@string/incorrect_password_please_try_again"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="#06B3BA"
                android:id="@+id/forgot_pass"
                android:textAlignment="center"
                android:text="@string/forgot_password"
                />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>